<resources>
    <string name="app_name">Folklore Regions</string>
    <string name="action_settings">Settings</string>
    <string name="folklore_regions">Folklore regions</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="searching">Searching...</string>
    <string name="changes_will_take_effect_after_restart">Changes will take effect, after the application is restarted.</string>

    <string name="bg">Bulgarian</string>
    <string name="en">English</string>
    <string name="no_result">Sorry, but the app can\'t recognize the song! Please, try again.</string>

    <string name="title_activity_result">Success!</string>

    <string name="song_label">Name: </string>
    <string name="artist_label">Artist: </string>
    <string name="text_region">The song\'s region is:  </string>

    <string name="title_activity_region">Region information</string>
    <string name="title_folklore_region">For more information select a region.</string>
    <string name="location">Location: </string>
    <string name="music">Folklore music: </string>
    <string name="dances">Dances: </string>
    <string name="clothes">Clothes folklore:  </string>
    <string name="crafts">Crafts: </string>
    <string name="habits">Habits: </string>
</resources>
