<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jenny.folkloresearch.RegionActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView android:id="@+id/name_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_below="@+id/name_region"
            android:textStyle="bold"/>
        <TextView android:id="@+id/region_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_name"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/dances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dances"
            android:textStyle="bold"/>
        <TextView android:id="@+id/region_dances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dances"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textStyle="bold"/>
        <TextView android:id="@+id/region_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/music"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/crafts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crafts"
            android:textStyle="bold"/>
        <TextView android:id="@+id/region_crafts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crafts"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habits"
            android:textStyle="bold"/>
        <TextView android:id="@+id/region_habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/habits"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/clothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes"
            android:textStyle="bold"/>
        <TextView android:id="@+id/region_clothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clothes"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
