<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jenny.folkloresearch.ResultActivity">
    <TextView android:id="@+id/song_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_label"
        android:textStyle="bold"/>
    <TextView android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/song_label"/>
    <TextView android:id="@+id/artist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/song_label"
        android:text="@string/artist_label"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <TextView android:id="@+id/song_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/song_name"
        android:layout_toRightOf="@+id/artist_label"
        android:layout_marginTop="10dp"/>
    <TextView android:id="@+id/text_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artist_label"
        android:text="@string/text_region"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"/>
    <ImageView android:id="@+id/song_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_region"
        android:onClick="openRegion"/>
</RelativeLayout>
